--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,5 +6,14 @@ nav:
   - Couchdb / Cloudand: couchdb.md
   - Mongo: mongodb.md
   - DB2: db2.md
+
+  
 theme: 
-  name: gitbook
+  name: material
+extra_css: ["extra.css"]
+markdown_extensions:
+  - admonition
+  - codehilite
+  - footnotes
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
