--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: DataBase playground with CDC
 repo_url: https://github.com/jbcodeforce/db-play
 nav:
   - introduction: index.md
-  - Postgres: postgres.md
+  - PostgreSQL: postgres.md
   - Cassandra: cassandra/readme.md
   - MySQL: mysql.md 
   - Couchdb / Cloudand: couchdb.md
