--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,11 +15,68 @@ nav:
 theme: 
   name: material
 extra_css: ["extra.css"]
+features:
+      - content.code.annotation
+      - content.code.copy
+      - content.tooltips
+      - content.tabs.link
+      - search.suggest
+      - search.highlight
+      - navigation.instant
+      - navigation.instant.progress
+      - navigation.tabs
+      - navigation.tabs.sticky
+      - navigation.tracking
+      - navigation.sections
+      - navigation.expand
+      - navigation.top
+      - navigation.footer
+extra_css: ["extra.css"]
+plugins:
+  - search:
+      lang: en
+  - minify:
+      minify_html: true
+  - mkdocstrings
 markdown_extensions:
   - abbr
   - attr_list
   - md_in_html
   - admonition
+  - codehilite
   - footnotes
+  - pymdownx.blocks.caption
   - pymdownx.smartsymbols
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.superfences
+  - toc:
+      permalink: true
+      toc_depth: 3
+  - pymdownx.tabbed
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.details
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.tilde
+  - pymdownx.snippets
+  - pymdownx.mark
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: 'https://github.com/jbcodeforce'
+    - icon: fontawesome/brands/linkedin
+      link: 'https://linkedin.com/in/jeromeboyer'
+    - icon: fontawesome/solid/paper-plane
+      mailto: jerome@intelligent-automations.com
