refactor doc and repo, add debezium tutorial

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,13 +2,18 @@ site_name: DataBase playground
 repo_url: https://github.com/jbcodeforce/db-play
 nav:
   - Introduction: index.md
-  - SQL: sql.md
-  - PostgreSQL: postgres.md
-  - Cassandra: cassandra/readme.md
-  - MySQL: mysql.md 
-  - Couchdb / Cloudant: couchdb.md
-  - Mongo: mongodb.md
-  - DB2: db2.md
+  - SQL: 
+    - Introduction: sql/index.md
+    - More advanced: sql/sql.md
+    - Puzzles: sql/puzzles.md
+  - Techno:
+    - PostgreSQL: postgres.md
+    - Cassandra: cassandra/readme.md
+    - MySQL: mysql.md 
+    - Debezium - CDC: debezium/index.md
+    - Couchdb / Cloudant: couchdb.md
+    - Mongo: mongodb.md
+    - DB2: db2.md
   - Data architecture: https://jbcodeforce.github.io/data/
   - Return to main: https://jbcodeforce.github.io
   
