--- a/deployment/k8s/postgresql/pg-cluster.yaml
+++ b/deployment/k8s/postgresql/pg-cluster.yaml
@@ -33,3 +33,14 @@ spec:
 
   storage:
     size: 1Gi
+  
+  additionalVolumes:
+    - name: data-files
+      persistentVolumeClaim:
+        claimName: data-files-pvc
+  
+  additionalVolumeMounts:
+    - name: data-files
+      mountPath: /data-files
+      readOnly: true
+  
